
               Failures which result in no action and a
               non-zero exit status (100):
               - a package argument does not exactly name
                 an available package;
               - a versioned argument requests a version
                 which is not available for every package
                 it applies to (Closes: #590686);

  * [cmdline]: changelog exits with non-zero status on any
               error (Closes: #675833)

- New features:

  * [cmdline]: Regular expressions are now supported to match names
               (same as apt-utils):

                $ aptitude show ^tf$

               Previously this would result in a "no such package"
               error.

  * New aliases for some command-line options:
    --yes, for --assume-yes (apt-get)
    --default-release, for --target-release (apt-utils)
    --install-on-startup, for -i
    --update-on-startup, for -u

  * New configuration item:
    Aptitude::CmdLine::Sorting, equivalent to --sort

- Minor bugs:

  * handle "-qq" like other apt-utils
  * properly process all -o command line options (Closes: #587671)
  * unknown command line options trigger an error (Closes: #434502)
  * --add-user-tag-to, --remove-user-tag-from are working;
    no bug reports suggests that noone has noticed they
    were broken, but they work now anyway

  * [cmdline]: Virtual packages which have an already
               installed provider are only skipped when the
               requested action is to install them.

  * [cmdline]: search exit with status 1 if it found no
               matches (Closes: #497299)

  * [cmdline]: why exits with status 1 if it found no
               reasons given the particular arguments

- Internal changes:

  * Unified the way packages are selected from command line
    arguments.

  * Use apt's CommandLine parser

    Previously aptitude was using it's own command line
    parser implemented on top of getopt.  Replacing this