@@ -10804,6 +10804,21 @@ e: Examine  !: Apply  .: Next  ,: Previous</screen>
 	      </seg>
 	    </seglistitem>
 
+	    <seglistitem id='configCmdLine-Fix-Missing'>
+	      <seg><literal>Aptitude::CmdLine::Fix-Missing</literal></seg>
+	      <seg><literal>false</literal></seg>
+	      <seg>
+                In command-line mode, if a package is unavailable of
+                fails to download to correctly and this option is
+                <literal>true</literal>, &aptitude; will try to
+                continue installing other packages without it.  The
+                package will still be marked for later installation,
+                as though <literal>--schedule-only</literal> had been
+                used.  Command-line Option: <literal><link
+                linkend='cmdlineOptionFixMissing'>--fix-missing</link></literal>.
+              </seg>
+            </seglistitem>
+
             <seglistitem id='configCmdLine-Versions-Group-By'>
               <seg><literal>Aptitude::CmdLine::Versions-Group-By</literal></seg>
 
